--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h5>This is my website. You can find things here such as my YouTube videos, projects, and more.</h5>
   <br><br>
   <h1><strong>My latest YouTube video:</strong></h1><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/HN_6AG4rkZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/i6jXnnDkDYY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br><br>
   <h1><strong>My main code project:</strong></h1><br>
   <a href="http://glori.tech"><h2>glori.tech</h2></a>
