added merch things (soon)

--- a/discord/unban.html
+++ b/discord/unban.html
@@ -27,9 +27,6 @@
       <li class="nav-item">
         <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://youtube.com/quickdaffy">YouTube</a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" target="_blank" rel="noopener noreferrer" href="merch">Merchandise</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.patreon.com/quick_?fan_landing=true">Patreon</a>
       </li>    
@@ -40,23 +37,8 @@
 
 <div class="container">
   <center>
-  <h1>Hi! I'm quickdaffy, but I mainly go by <strong>quick.</strong></h1><br>
-  <h5>This is my website. You can find things here such as my YouTube videos, projects, and more.</h5>
-  <br><br>
-  <h1><strong>My latest YouTube video:</strong></h1><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ShL1r46R7mk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br><br>
-  <h1><strong>My main code project:</strong></h1><br>
-  <a href="http://glori.tech"><h2>glori.tech</h2></a>
-  <img class="glorimg" src="assets/img/glori.tech.png"><br><br>
-  <h4>glori.tech is a platform where Minecraft Modification Developers can publish their software and distribute it to their users very easily.
-  We have the Glori API, where developers are given a login and access to the panel, where they can publish their mods with ease. It takes just an upload and a
-  click of a button to publish an update to the entire internet, where their installers or launchers can easily access the files. </h4>
-
-  <br>
-  <br>
-  <br>
-  <br>
+    <h1>Discord Ban Appeal<h1><br>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSemMz71BdJoQ-xKQmcjPev4zovvyNQjzc-Pt-bF_CDs59YyVQ/viewform?embedded=true" width="640" height="1090" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </center>
 </div>
 
