--- a/discord/index.html
+++ b/discord/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/rdBD94QDgE"/>
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/pdF7hEe7VK"/>
 </html>
