--- a/discord/index.html
+++ b/discord/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/w2pe6Sg74e"/>
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/uW8mDPAXaN"/>
 </html>
