added discord embed thing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <link href="assets/style/style.css" rel="stylesheet" type="text/css"/>
+
+    <meta property="og:type" content="website">
+    <meta content="quick" property="og:title">
+    <meta content="a very sexy man uwu" property="og:description">
+    <meta content="#00ffff" data-react-helmet="true" name="theme-color">
   </head>
   <body>
 
@@ -21,7 +26,7 @@
         <a class="link" href="about">More About me</a> | <a class="link" href="services">My services</a> | <a class="link" href="discord">Join my Discord</a>  
 
         </h3>
-        
+
       </div>
 
     </center>
