added java protection service thing

--- a/services/index.html
+++ b/services/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="../assets/style/style.css" rel="stylesheet" type="text/css"/>
+    <script src="https://shoppy.gg/api/embed.js"></script>
   </head>
   <body>
 
@@ -12,7 +13,13 @@
         <h1 class="text">quick's services</h1>
         <h3 class="text">
 
-        <p class="text">Coming soon</p>
+        <div class="card">
+          <div class="container">
+            <h4 class="chead"><strong>Java Protection</strong></h4> 
+            <p class="ctext">I will personally protect your Java Program or Minecraft Client via obfuscation, authentication, and anti-cracking/debugging measures.</p> 
+            <button class="button" data-shoppy-product="KboS2Ge">Purchase</button>
+          </div>
+        </div>
 
         </h3>
       </div>
