--- a/discord/index.html
+++ b/discord/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/jtcSPa2Tkt"/>
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/8q4UXCnKtA"/>
 </html>
