new backrgound new font mopre tsuff

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="assets/style/style.css" rel="stylesheet" type="text/css"/>
+    <script src="assets/js/script.js"></script>
 
     <meta property="og:type" content="website">
     <meta content="quick" property="og:title">
@@ -14,17 +15,18 @@
       
       <div class="main-panel">
         
-        <h1 class="text">Hey, I'm quick.</h1>
-        <h3 class="text">I'm a developer, primarily in Java, but I know other<br> 
+        <p class="texth">Hey, I'm quick.</p>
+        <p class="text">
+        I'm a developer, primarily in Java, but I know other<br> 
         languages as well, such as C#, Ruby, and HTML/CSS.<br>
         I am also learning JavaScript and reverse engineering.<br>
         My main projects right now:<br><br>
         <a class="link" href="http://monsoon.wtf">Monsoon</a>, a Player Assistance Mod for Minecraft.<br>
         <a class="link" href="http://lockup.wtf">lockup.wtf</a>, a Private community that offers many things.<br>
         <br><br>
-        <a class="link" href="about">More About me</a> | <a class="link" href="services">My services</a> | <a class="link" href="discord">Join my Discord</a>  
+        <a class="link" href="contact">Contact me</a> | <a class="link" href="services">My services</a> | <a class="link" href="discord">Join my Discord</a>
+        </p>
 
-        </h3>
 
       </div>
 
