--- a/services/index.html
+++ b/services/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="../assets/style/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://shoppy.gg/api/embed.js"></script>
+    <script src="assets/js/script.js"></script>
   </head>
   <body>
 
@@ -10,18 +11,18 @@
       
       <div class="main-panel">
         
-        <h1 class="text">quick's services</h1>
-        <h3 class="text">
+        <p class="texth">quick's services</p>
+        <p class="text">
 
         <div class="card">
           <div class="container">
-            <h4 class="chead"><strong>Java Protection</strong></h4> 
+            <p class="chead"><strong>Java Protection</strong></p> 
             <p class="ctext">I will personally protect your Java Program or Minecraft Client via obfuscation, authentication, and anti-cracking/debugging measures.</p> 
             <button class="button" data-shoppy-product="KboS2Ge">Purchase</button>
           </div>
         </div>
 
-        </h3>
+        </p>
       </div>
 
     </center>
