--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,7 @@
     <link href="../assets/style/style.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <script src="assets/js/script.js"></script>
+    <title>quick's contact info</title>
   </head>
   <body>
 
@@ -15,6 +16,11 @@
         <p class="text">
           <i class="fab fa-discord"></i> quick#1337 | <i class="fas fa-at"></i> <a class="link" href="mailto:quickdaffy@gmail.com">quickdaffy@gmail.com</a>
         </p>
+
+
+      <br>
+      <button class="button" onclick="window.location.href='../index.html'">Back</button>
+
       </div>
 
     </center>
