--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta content="quick" property="og:title">
     <meta content="a very sexy man uwu" property="og:description">
     <meta content="#00ffff" data-react-helmet="true" name="theme-color">
+
+    <title>quick's website</title>
   </head>
   <body>
 
@@ -15,12 +17,13 @@
       
       <div class="main-panel">
         
-        <p class="texth">Hey, I'm quick.</p>
+        <p class="texth">Hi, I'm quick.</p>
         <p class="text">
         I'm a developer, primarily in Java, but I know other<br> 
         languages as well, such as C#, Ruby, and HTML/CSS.<br>
-        I am also learning JavaScript and reverse engineering.<br>
-        My main projects right now:<br><br>
+        I am also learning JavaScript and a bit of reverse<br>
+        engineering for Java programs.<br><br>
+        My main projects right now:<br>
         <a class="link" href="http://monsoon.wtf">Monsoon</a>, a Player Assistance Mod for Minecraft.<br>
         <a class="link" href="http://lockup.wtf">lockup.wtf</a>, a Private community that offers many things.<br>
         <br><br>
