--- a/services/index.html
+++ b/services/index.html
@@ -4,6 +4,7 @@
     <link href="../assets/style/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://shoppy.gg/api/embed.js"></script>
     <script src="assets/js/script.js"></script>
+    <title>quick's services</title>
   </head>
   <body>
 
@@ -17,12 +18,22 @@
         <div class="card">
           <div class="container">
             <p class="chead"><strong>Java Protection</strong></p> 
-            <p class="ctext">I will personally protect your Java Program or Minecraft Client via obfuscation, authentication, and anti-cracking/debugging measures.</p> 
+            <p class="ctext">I will personally protect your Java Program or Minecraft Client via obfuscation, authentication, and anti-cracking, debugging and deobfuscation measures.</p> 
             <button class="button" data-shoppy-product="KboS2Ge">Purchase</button>
           </div>
         </div>
 
+        <div class="card">
+          <div class="container">
+            <p class="chead"><strong>Advertisement</strong></p> 
+            <p class="ctext">A great way to support what I do! An advertisement is a kind of mini-sponsorship. You can buy one to help grow your client, Discord Server, or anything else!</p> 
+            <button class="button" data-shoppy-product="pquMxe6">Purchase</button>
+          </div>
+        </div>
+
         </p>
+
+        <button class="button" onclick="window.location.href='../index.html'">Back</button>
       </div>
 
     </center>
