--- a/discord/index.html
+++ b/discord/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/Vs7KmQbkXH"/>
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/Sx9bz3PrT3"/>
   <script src="assets/js/script.js"></script>
 </html>
